# dot-nexus

./: pyproject.toml
dotnexus/: main.py
example/components/: kitty  qtile
example/profiles/: example.toml
nexus/: cli.py  components.py  config.py  main.py  profiles.py
tests/: test_main.py
