[project]
name = "nexus"
version = "0.1.0"
authors = [
    {name = "Vitor Jeronimo", email = "vitor.bently@hotmail.com"},
]
description = "A centralized .dotfiles management system"
readme = "README.md"
requires-python = ">=3.11" # TODO: check what minimum version of Python is required

# TODO: check out https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
# TODO: check out https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
